removed main.js as I will be using app.js and updated index.html file which i will be using as the home page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Art Auction site home</title>
+    <script type="module" src="src/app.js" defer></script>
   </head>
   <body>
+    <header>
+      <nav><ul>
+        <li>
+          <img src="images/icons8-home-96.png" alt="home icon">
+          <a href="/">Home</a></li>
+        <li> <img src="images/icons8-user-96.png" alt="">
+          <a href="/profile/">Profile</a> </li>
+        <li> <img src="images/icons8-auction-96.png" alt="">
+          <a href="">My bids</a> </li>
+      </ul></nav>
+    </header>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+ 
   </body>
 </html>
