--- a/auth/index.html
+++ b/auth/index.html
@@ -136,7 +136,8 @@
           </div>
           <div>
             <label for="bio">Bio</label>
-            <input id="bio" type="text" name="bio" maxlength="160" required />
+            <textarea id="bio" type="text" name="bio" maxlength="160" required>
+            </textarea>
           </div>
           <div>
             <label for="avatarUrl">Avatar url</label>
