updated nav links

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="/my_bids/">
                 <img src="images/icons8-bids-Desktop.png" alt="bids icon" />My
                 Bids</a
               >
             </li>
             <li>
-              <a href="/listing/create">
+              <a href="/listing/create/">
                 <img src="images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
               >
             </li>
             <li>
-              <a href="">
+              <a href="/auth/">
                 <img
                   src="images/icons8-register-desktop.png"
                   alt="register icon"
@@ -64,7 +64,7 @@
                 Register
               </a>
             </li>
-            <a href="">
+            <a href="/auth/">
               <img src="images/sign-in-desktop.png" alt="sign in icon" />
               Sign in
             </a>
