--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -48,7 +48,7 @@
               >
             </li>
             <li>
-              <a href="">
+              <a href="listing/create/">
                 <img src="../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
