--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -10,12 +10,15 @@
   <body>
     <header>
       <div class="side-bar">
-        <img src="../images/Logo.png" alt="Art logo" />
+        <img src="../../images/Logo.png" alt="Art logo" />
         <nav>
           <ul>
             <li>
               <a href="/">
-                <img src="../images/icons8-home-Desktop.png" alt="home icon" />
+                <img
+                  src="../../images/icons8-home-Desktop.png"
+                  alt="home icon"
+                />
 
                 Home</a
               >
@@ -23,7 +26,7 @@
             <li>
               <a href="/profile/">
                 <img
-                  src="../images/icons8-user-desktop.png"
+                  src="../../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
                 Profile</a
@@ -33,7 +36,7 @@
             <li>
               <a href="">
                 <img
-                  src="../images/icons8-my-listings-desktop.png"
+                  src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
                 My Listings
@@ -42,14 +45,14 @@
             <li>
               <a href="">
                 <img
-                  src="../images/icons8-bids-Desktop.png"
+                  src="../../images/icons8-bids-Desktop.png"
                   alt="bids icon"
                 />My Bids</a
               >
             </li>
             <li>
               <a href="">
-                <img src="../images/icons8-add-desktop.png" alt="add icon" />
+                <img src="../../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
               >
@@ -57,23 +60,30 @@
             <li>
               <a href="">
                 <img
-                  src="../images/icons8-register-desktop.png"
+                  src="../../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
                 Register
               </a>
             </li>
-            <a href="">
-              <img src="../images/sign-in-desktop.png" alt="sign in icon" />
-              Sign in
-            </a>
-            <a href="">
-              <img
-                src="../images/icons8-sign-out-desktop.png"
-                alt="sign out icon"
-              />
-              Sign out
-            </a>
+            <li>
+              <a href="">
+                <img
+                  src="../../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
+                Sign in
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="../../images/icons8-sign-out-desktop.png"
+                  alt="sign out icon"
+                />
+                Sign out
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -123,18 +133,21 @@
       <div>
         <a href="">
           <img
-            src="../images/icons8-facebook-desktop.png"
+            src="../../images/icons8-facebook-desktop.png"
             alt="facebook icon"
           />
         </a>
         <a href="">
           <img
-            src="../images/icons8-instagram-desktop.png"
+            src="../../images/icons8-instagram-desktop.png"
             alt="instagram icon"
           />
         </a>
         <a href="">
-          <img src="../images/icons8-twitter-desktop.png" alt="twitter icon" />
+          <img
+            src="../../images/icons8-twitter-desktop.png"
+            alt="twitter icon"
+          />
         </a>
       </div>
     </footer>
