Added logout function and function to display or hide logout button

--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
               <img src="images/sign-in-desktop.png" alt="sign in icon" />
               Sign in
             </a>
-            <a href="">
+            <button class="sign-out-btn hidden">
               <img
+                class="sign-out-btn hidden"
                 src="images/icons8-sign-out-desktop.png"
                 alt="sign out icon"
               />
               Sign out
-            </a>
+            </button>
           </ul>
         </nav>
       </div>
