--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -76,13 +76,14 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <button class="sign-out-btn hidden">
                 <img
+                  class="sign-out-btn hidden"
                   src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 Sign out
-              </a>
+              </button>
             </li>
           </ul>
         </nav>
