--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -64,10 +64,14 @@
               </a>
             </li>
             <li>
-              <a href="">
-                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
+              <button class="sign-out-btn hidden">
+                <img
+                  class="sign-out-btn hidden"
+                  src="../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
                 Sign in
-              </a>
+              </button>
             </li>
             <li>
               <a href="">
