--- a/auth/index.html
+++ b/auth/index.html
@@ -70,8 +70,9 @@
               </a>
             </li>
             <li>
-              <button id="sign-out-btn">
+              <button class="sign-out-btn hidden">
                 <img
+                  class="sign-out-btn hidden"
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
