--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -63,17 +63,22 @@
                 Register
               </a>
             </li>
-            <a href="">
-              <img src="../images/sign-in-desktop.png" alt="sign in icon" />
-              Sign in
-            </a>
-            <a href="">
-              <img
-                src="../images/icons8-sign-out-desktop.png"
-                alt="sign out icon"
-              />
-              Sign out
-            </a>
+            <li>
+              <a href="">
+                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
+                Sign in
+              </a>
+            </li>
+            <li>
+              <button class="sign-out-btn hidden">
+                <img
+                  class="sign-out-btn hidden"
+                  src="../images/icons8-sign-out-desktop.png"
+                  alt="sign out icon"
+                />
+                Sign out
+              </button>
+            </li>
           </ul>
         </nav>
       </div>
