updated id for all sign in buttons in all html files and added function for displaying and hiding sign in button on side bar nav

--- a/auth/index.html
+++ b/auth/index.html
@@ -64,10 +64,10 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <button id="sign-in-btn-nav">
                 <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
-              </a>
+              </button>
             </li>
             <li>
               <button class="sign-out-btn hidden">
@@ -87,8 +87,8 @@
       <h1>Sign in or Register an Account</h1>
 
       <div>
-        <button id="sign-in-btn">Sign in</button>
-        <button id="reg-btn">Register</button>
+        <button id="sign-in-btn-tab">Sign in</button>
+        <button id="reg-btn-tab">Register</button>
       </div>
 
       <div id="sign-in-form">
