--- a/index.html
+++ b/index.html
@@ -64,18 +64,22 @@
                 Register
               </a>
             </li>
-            <a href="/auth/">
-              <img src="images/sign-in-desktop.png" alt="sign in icon" />
-              Sign in
-            </a>
-            <button class="sign-out-btn hidden">
-              <img
-                class="sign-out-btn hidden"
-                src="images/icons8-sign-out-desktop.png"
-                alt="sign out icon"
-              />
-              Sign out
-            </button>
+            <li>
+              <button id="sign-in-btn-nav">
+                <img src="images/sign-in-desktop.png" alt="sign in icon" />
+                Sign in
+              </button>
+            </li>
+            <li>
+              <button class="sign-out-btn hidden">
+                <img
+                  class="sign-out-btn hidden"
+                  src="images/icons8-sign-out-desktop.png"
+                  alt="sign out icon"
+                />
+                Sign out
+              </button>
+            </li>
           </ul>
         </nav>
       </div>
