--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -67,13 +67,10 @@
               </a>
             </li>
             <li>
-              <a href="">
-                <img
-                  src="../../images/sign-in-desktop.png"
-                  alt="sign in icon"
-                />
+              <button id="sign-in-btn-nav">
+                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
-              </a>
+              </button>
             </li>
             <li>
               <button class="sign-out-btn hidden">
