--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -64,23 +64,19 @@
               </a>
             </li>
             <li>
-              <button class="sign-out-btn hidden">
-                <img
-                  class="sign-out-btn hidden"
-                  src="../images/sign-in-desktop.png"
-                  alt="sign in icon"
-                />
+              <button id="sign-in-btn-nav">
+                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
               </button>
             </li>
             <li>
-              <a href="">
+              <button class="sign-out-btn hidden">
                 <img
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 Sign out
-              </a>
+              </button>
             </li>
           </ul>
         </nav>
