--- a/listing/index.html
+++ b/listing/index.html
@@ -64,10 +64,10 @@
               </a>
             </li>
             <li>
-              <a href="/auth/">
+              <button id="sign-in-btn-nav">
                 <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
-              </a>
+              </button>
             </li>
             <li>
               <button class="sign-out-btn hidden">
