updated all register nav links in all html files and created function for displaying and hiding register link when logged in or out

--- a/auth/index.html
+++ b/auth/index.html
@@ -31,7 +31,7 @@
             </li>
 
             <li>
-              <a href="">
+              <a href="/my_listings/">
                 <img
                   src="../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="/my_bids/">
                 <img
                   src="../images/icons8-bids-Desktop.png"
                   alt="bids icon"
@@ -48,14 +48,14 @@
               >
             </li>
             <li>
-              <a href="">
+              <a href="/listing/create/">
                 <img src="../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
               >
             </li>
             <li>
-              <a href="">
+              <a id="reg-link-nav" href="/auth/">
                 <img
                   src="../images/icons8-register-desktop.png"
                   alt="register icon"
@@ -70,9 +70,9 @@
               </button>
             </li>
             <li>
-              <button class="sign-out-btn hidden">
+              <button class="sign-out-btn">
                 <img
-                  class="sign-out-btn hidden"
+                  class=""
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
