--- a/listing/index.html
+++ b/listing/index.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li>
-              <a href="/auth/">
+              <a id="reg-link-nav" href="/auth/">
                 <img
                   src="../images/icons8-register-desktop.png"
                   alt="register icon"
@@ -70,9 +70,9 @@
               </button>
             </li>
             <li>
-              <button class="sign-out-btn hidden">
+              <button class="sign-out-btn">
                 <img
-                  class="sign-out-btn hidden"
+                  class=""
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
