--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li>
-              <a href="">
+              <a id="reg-link-nav" href="/auth/">
                 <img
                   src="../../images/icons8-register-desktop.png"
                   alt="register icon"
@@ -73,9 +73,9 @@
               </button>
             </li>
             <li>
-              <button class="sign-out-btn hidden">
+              <button class="sign-out-btn">
                 <img
-                  class="sign-out-btn hidden"
+                  class=""
                   src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
