--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li>
-              <a href="">
+              <a id="reg-link-nav" href="/auth/">
                 <img
                   src="../images/icons8-register-desktop.png"
                   alt="register icon"
@@ -70,7 +70,7 @@
               </button>
             </li>
             <li>
-              <button class="sign-out-btn hidden">
+              <button class="sign-out-btn">
                 <img
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
