--- a/profile/index.html
+++ b/profile/index.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li>
-              <a href="">
+              <a id="reg-link-nav" href="/auth/">
                 <img
                   src="../images/icons8-register-desktop.png"
                   alt="register icon"
