updated id for sign in link in nav bar

--- a/profile/index.html
+++ b/profile/index.html
@@ -64,10 +64,10 @@
               </a>
             </li>
             <li>
-              <button id="sign-in-btn-nav">
+              <a id="sign-in-link-nav" href="/auth/">
                 <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
-              </button>
+              </a>
             </li>
             <li>
               <a href="">
