Added id to all My listings links in all html files and created function for displaying or hiding the link depending on whether user is logged in or not

--- a/auth/index.html
+++ b/auth/index.html
@@ -31,7 +31,7 @@
             </li>
 
             <li>
-              <a href="/my_listings/">
+              <a id="my-listings-link-nav" href="/my_listings/">
                 <img
                   src="../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
