--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -34,7 +34,7 @@
             </li>
 
             <li>
-              <a href="">
+              <a id="my-listings-link-nav" href="/my_listings/">
                 <img
                   src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
