--- a/listing/index.html
+++ b/listing/index.html
@@ -31,7 +31,7 @@
             </li>
 
             <li>
-              <a href="/my_listings/">
+              <a id="my-listings-link-nav" href="/my_listings/">
                 <img
                   src="../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
