Added ids for all profile and my bids links in all html files and created a function to display and hide profile and my bids links when logged in or out

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               >
             </li>
             <li>
-              <a href="/profile/">
+              <a id="profile-link-nav" href="/profile/">
                 <img src="images/icons8-user-desktop.png" alt="profile icon" />
                 Profile</a
               >
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li>
-              <a href="/my_bids/">
+              <a id="my-bids-link-nav" href="/my_bids/">
                 <img src="images/icons8-bids-Desktop.png" alt="bids icon" />My
                 Bids</a
               >
