--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -21,7 +21,7 @@
               >
             </li>
             <li>
-              <a href="/profile/">
+              <a id="profile-link-nav" href="/profile/">
                 <img
                   src="../images/icons8-user-desktop.png"
                   alt="profile icon"
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a id="my-bids-link-nav" href="/my_bids/">
                 <img
                   src="../images/icons8-bids-Desktop.png"
                   alt="bids icon"
