Added ids to all create listing links in all html files and created function to display or hide the link depending on whether user is logged in or not

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               >
             </li>
             <li>
-              <a href="/listing/create/">
+              <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
