--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -51,7 +51,7 @@
               >
             </li>
             <li>
-              <a href="">
+              <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="../../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
