removed hidden class from login and register forms

--- a/auth/index.html
+++ b/auth/index.html
@@ -93,7 +93,7 @@
 
       <div id="sign-in-form">
         <h2>Sign in</h2>
-        <form class="hidden" name="sign-in">
+        <form class="" name="sign-in">
           <div>
             <label for="email">Email</label>
             <input id="email" type="email" name="email" required />
@@ -108,7 +108,7 @@
       </div>
       <div id="register-form">
         <h2>Register</h2>
-        <form class="hidden" name="register">
+        <form class="" name="register">
           <div>
             <label for="name">Name</label>
             <input
