Added register function

--- a/auth/index.html
+++ b/auth/index.html
@@ -105,10 +105,12 @@
           </div>
           <button>Sign in</button>
         </form>
+        <div class="error-message"></div>
       </div>
+
       <div id="register-form">
         <h2>Register</h2>
-        <form class="" name="register">
+        <form id="reg-form" class="" name="register">
           <div>
             <label for="name">Name</label>
             <input
@@ -184,6 +186,7 @@
             />
           </div>
           <button>Register</button>
+          <div class="error-message"></div>
         </form>
       </div>
     </main>
