Updated register function

--- a/auth/index.html
+++ b/auth/index.html
@@ -16,9 +16,8 @@
             <li>
               <a href="/">
                 <img src="../images/icons8-home-Desktop.png" alt="home icon" />
-
-                Home</a
-              >
+                Home
+              </a>
             </li>
             <li>
               <a id="profile-link-nav" href="/profile/">
@@ -26,10 +25,9 @@
                   src="../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
-                Profile</a
-              >
+                Profile
+              </a>
             </li>
-
             <li>
               <a id="my-listings-link-nav" href="/my_listings/">
                 <img
@@ -41,18 +39,15 @@
             </li>
             <li>
               <a id="my-bids-link-nav" href="/my_bids/">
-                <img
-                  src="../images/icons8-bids-Desktop.png"
-                  alt="bids icon"
-                />My Bids</a
-              >
+                <img src="../images/icons8-bids-Desktop.png" alt="bids icon" />
+                My Bids
+              </a>
             </li>
             <li>
               <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="../images/icons8-add-desktop.png" alt="add icon" />
-
-                Create Listing</a
-              >
+                Create Listing
+              </a>
             </li>
             <li>
               <a id="reg-link-nav" href="/auth/">
@@ -128,7 +123,7 @@
               id="email-reg"
               type="email"
               name="email-reg"
-              pattern="^[a-zA-Z0-9._%+-]+@stud\.noroff\.no$"
+              pattern="^[a-zA-Z0-9._%+\-]+@stud\.noroff\.no$"
               required
             />
           </div>
@@ -186,7 +181,7 @@
             />
           </div>
           <button>Register</button>
-          <div class="error-message"></div>
+          <div class="error-message-reg-form"></div>
         </form>
       </div>
     </main>
