Trying to fix register function

--- a/auth/index.html
+++ b/auth/index.html
@@ -105,7 +105,13 @@
 
       <div id="register-form">
         <h2>Register</h2>
-        <form id="reg-form" class="" name="register">
+        <form
+          id="reg-form"
+          action="/profile/"
+          method="post"
+          class=""
+          name="register"
+        >
           <div>
             <label for="name">Name</label>
             <input
