Still trying to resolve register issue

--- a/auth/index.html
+++ b/auth/index.html
@@ -105,13 +105,7 @@
 
       <div id="register-form">
         <h2>Register</h2>
-        <form
-          id="reg-form"
-          action="/profile/"
-          method="post"
-          class=""
-          name="register"
-        >
+        <form id="reg-form" method="post" class="" name="register">
           <div>
             <label for="name">Name</label>
             <input
@@ -146,7 +140,7 @@
           </div>
           <div>
             <label for="bio">Bio</label>
-            <textarea id="bio" type="text" name="bio" maxlength="160" required>
+            <textarea id="bio" type="text" name="bio" maxlength="160">
             </textarea>
           </div>
           <div>
