Removed all register code and starting again

--- a/auth/index.html
+++ b/auth/index.html
@@ -181,7 +181,7 @@
             />
           </div>
           <button>Register</button>
-          <div class="error-message-reg-form"></div>
+          <p class="error-message-reg-form"></p>
         </form>
       </div>
     </main>
