fixed registration functions, now works

--- a/auth/index.html
+++ b/auth/index.html
@@ -118,22 +118,22 @@
           </div>
 
           <div>
-            <label for="email-reg">Email</label>
+            <label for="emailReg">Email</label>
             <input
-              id="email-reg"
+              id="emailReg"
               type="email"
-              name="email-reg"
+              name="emailReg"
               pattern="^[a-zA-Z0-9._%+\-]+@stud\.noroff\.no$"
               required
             />
           </div>
 
           <div>
-            <label for="password-reg">Password</label>
+            <label for="passwordReg">Password</label>
             <input
               type="password"
-              name="password-reg"
-              id="password-reg"
+              name="passwordReg"
+              id="passwordReg"
               minlength="8"
               required
             />
@@ -181,7 +181,7 @@
             />
           </div>
           <button>Register</button>
-          <p class="error-message-reg-form"></p>
+          <p id="error-message-reg-form"></p>
         </form>
       </div>
     </main>
