Added hidden class to both register and login forms, so they do not display automatically when loading the pag

--- a/auth/index.html
+++ b/auth/index.html
@@ -86,7 +86,7 @@
         <button id="reg-btn-tab">Register</button>
       </div>
 
-      <div id="sign-in-form">
+      <div class="hidden" id="sign-in-form">
         <h2>Sign in</h2>
         <form class="" name="sign-in">
           <div>
@@ -103,7 +103,7 @@
         <div class="error-message"></div>
       </div>
 
-      <div id="register-form">
+      <div class="hidden" id="register-form">
         <h2>Register</h2>
         <form id="reg-form" method="post" class="" name="register">
           <div>
