Added functions and constants for login

--- a/auth/index.html
+++ b/auth/index.html
@@ -88,7 +88,7 @@
 
       <div class="hidden" id="sign-in-form">
         <h2>Sign in</h2>
-        <form class="" name="sign-in">
+        <form class="sign-in-form" name="sign-in">
           <div>
             <label for="email">Email</label>
             <input id="email" type="email" name="email" required />
@@ -100,7 +100,7 @@
           </div>
           <button>Sign in</button>
         </form>
-        <div class="error-message"></div>
+        <div id="error-message-sign-in-form"></div>
       </div>
 
       <div class="hidden" id="register-form">
