--- a/profile/index.html
+++ b/profile/index.html
@@ -70,13 +70,13 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <button class="sign-out-btn" href="">
                 <img
                   src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 Sign out
-              </a>
+              </button>
             </li>
           </ul>
         </nav>
