Added constants and functions for displaying profile on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -85,6 +85,7 @@
     <main>
       <div class="my-profile">
         <h1>My Profile</h1>
+        <div id="my-profile"></div>
       </div>
     </main>
     <footer>
