--- a/profile/index.html
+++ b/profile/index.html
@@ -87,7 +87,7 @@
         <h1>My Profile</h1>
         <div id="my-profile"></div>
       </div>
-
+      <button id="show-update-form-btn">Update Profile</button>
       <div class="hidden" id="update-profile-form">
         <h2>Update Profile</h2>
         <form class="update-profile-form" name="update-profile">
