updated display update profile form function

--- a/profile/index.html
+++ b/profile/index.html
@@ -88,9 +88,9 @@
         <div id="my-profile"></div>
       </div>
       <button id="show-update-form-btn">Update Profile</button>
-      <div class="hidden" id="update-profile-form">
+      <div id="update-profile-form">
         <h2>Update Profile</h2>
-        <form class="update-profile-form" name="update-profile">
+        <form name="update-profile">
           <button>X</button>
           <div>
             <label for="bio">Bio</label>
