Added function for updating profile and moved update functions into the correct file

--- a/profile/index.html
+++ b/profile/index.html
@@ -90,7 +90,7 @@
       <button id="show-update-form-btn">Update Profile</button>
       <div id="update-profile-form">
         <h2>Update Profile</h2>
-        <form name="update-profile">
+        <form class="update-profile-form" name="update-profile">
           <button>X</button>
           <div>
             <label for="bio">Bio</label>
