Fixed Update profile function

--- a/profile/index.html
+++ b/profile/index.html
@@ -99,13 +99,13 @@
           </div>
 
           <div>
-            <label for="avatarUrl">Avatar Url</label>
+            <label for="avatar">Avatar Url</label>
             <input type="avatarUrl" name="avatarUrl" id="avatarUrl" />
           </div>
 
           <div>
             <label for="avatarAlt">Avatar Alt</label>
-            <input type="url" name="avatarUrl" id="avatarAlt" />
+            <input type="url" name="avatarAlt" id="avatarAlt" />
           </div>
 
           <div>
