Updated some links in create listing page

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Art Auction App - Create a Listing</title>
-    <script type="module" src="../src/app.js" defer></script>
+    <script type="module" src="../../src/app.js" defer></script>
   </head>
   <body>
     <header>
@@ -68,7 +68,10 @@
             </li>
             <li>
               <a id="sign-in-link-nav" href="/auth/">
-                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
+                <img
+                  src="../../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
                 Sign in
               </a>
             </li>
