Added js for create listing page

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -92,7 +92,7 @@
     <main>
       <div class="create-form-container">
         <h1>Create a Listing</h1>
-        <form name="create-listing" method="post" id="create-listing-form">
+        <form name="create-listing" method="post" id="create-form">
           <div>
             <label for="title">Title</label>
             <input id="title" type="text" name="title" required />
