fixed functions for creating a listing

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -92,7 +92,8 @@
     <main>
       <div class="create-form-container">
         <h1>Create a Listing</h1>
-        <form name="create-listing" method="post" id="create-form">
+
+        <form name="create-listing" id="create-form">
           <div>
             <label for="title">Title</label>
             <input id="title" type="text" name="title" required />
@@ -109,12 +110,12 @@
           </div>
 
           <div>
-            <label for="mediaUrl">Media url</label>
-            <input type="url" name="mediaUrl" id="mediaUrl" />
+            <label for="url">Media url</label>
+            <input type="url" name="url" id="url" />
           </div>
           <div>
-            <label for="mediaAlt">Media alt</label>
-            <input id="mediaAlt" type="text" name="mediaAlt" />
+            <label for="alt">Media alt</label>
+            <input id="alt" type="text" name="alt" />
           </div>
           <div>
             <label for="endsAt">Ends at</label>
