--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -48,7 +48,7 @@
               >
             </li>
             <li>
-              <a id="create-listing-link-nav" href="listing/create/">
+              <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
