Added js constants and functions for displaying posts on my posts page

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -111,11 +111,23 @@
 
           <div>
             <label for="url">Media url</label>
-            <input type="url" name="url" id="url" />
+            <input
+              type="url"
+              name="url"
+              id="url"
+              multiple
+              placeholder="Enter URLs separated by commas"
+            />
           </div>
           <div>
             <label for="alt">Media alt</label>
-            <input id="alt" type="text" name="alt" />
+            <input
+              id="alt"
+              type="text"
+              name="alt"
+              multiple
+              placeholder="Enter Alt texts separated by commas"
+            />
           </div>
           <div>
             <label for="endsAt">Ends at</label>
