--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -86,7 +86,7 @@
     <main>
       <h1>My Listings</h1>
 
-      <div class="my-auction-listings"></div>
+      <div id="my-auction-listings"></div>
     </main>
     <footer>
       <div>
