Created constants and functions for displaying listings on My listings page

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -110,21 +110,21 @@
           </div>
 
           <div>
-            <label for="url">Media url</label>
+            <label for="urls">Media url</label>
             <input
               type="url"
-              name="url"
-              id="url"
+              name="urls"
+              id="urls"
               multiple
               placeholder="Enter URLs separated by commas"
             />
           </div>
           <div>
-            <label for="alt">Media alt</label>
+            <label for="alts">Media alt</label>
             <input
-              id="alt"
+              id="alts"
               type="text"
-              name="alt"
+              name="alts"
               multiple
               placeholder="Enter Alt texts separated by commas"
             />
