--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Art Auction App - Edit a Listing</title>
-    <script type="module" src="../src/app.js" defer></script>
+    <script type="module" src="../../src/app.js" defer></script>
   </head>
   <body>
     <header>
       <div class="side-bar">
-        <img src="../images/Logo.png" alt="Art logo" />
+        <img src="../../images/Logo.png" alt="Art logo" />
         <nav>
           <ul>
             <li>
               <a href="/">
-                <img src="../images/icons8-home-Desktop.png" alt="home icon" />
+                <img
+                  src="../../images/icons8-home-Desktop.png"
+                  alt="home icon"
+                />
 
                 Home</a
               >
@@ -23,7 +26,7 @@
             <li>
               <a id="profile-link-nav" href="/profile/">
                 <img
-                  src="../images/icons8-user-desktop.png"
+                  src="../../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
                 Profile</a
@@ -33,7 +36,7 @@
             <li>
               <a id="my-listings-link-nav" href="/my_listings/">
                 <img
-                  src="../images/icons8-my-listings-desktop.png"
+                  src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
                 My Listings
@@ -42,14 +45,14 @@
             <li>
               <a id="my-bids-link-nav" href="/my_bids/">
                 <img
-                  src="../images/icons8-bids-Desktop.png"
+                  src="../../images/icons8-bids-Desktop.png"
                   alt="bids icon"
                 />My Bids</a
               >
             </li>
             <li>
               <a id="create-listing-link-nav" href="/listing/create/">
-                <img src="../images/icons8-add-desktop.png" alt="add icon" />
+                <img src="../../images/icons8-add-desktop.png" alt="add icon" />
 
                 Create Listing</a
               >
@@ -57,7 +60,7 @@
             <li>
               <a id="reg-link-nav" href="/auth/">
                 <img
-                  src="../images/icons8-register-desktop.png"
+                  src="../../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
                 Register
@@ -65,14 +68,17 @@
             </li>
             <li>
               <a id="sign-in-link-nav" href="/auth/">
-                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
+                <img
+                  src="../../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
                 Sign in
               </a>
             </li>
             <li>
               <button class="sign-out-btn">
                 <img
-                  src="../images/icons8-sign-out-desktop.png"
+                  src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 Sign out
@@ -129,18 +135,21 @@
       <div>
         <a href="">
           <img
-            src="../images/icons8-facebook-desktop.png"
+            src="../../images/icons8-facebook-desktop.png"
             alt="facebook icon"
           />
         </a>
         <a href="">
           <img
-            src="../images/icons8-instagram-desktop.png"
+            src="../../images/icons8-instagram-desktop.png"
             alt="instagram icon"
           />
         </a>
         <a href="">
-          <img src="../images/icons8-twitter-desktop.png" alt="twitter icon" />
+          <img
+            src="../../images/icons8-twitter-desktop.png"
+            alt="twitter icon"
+          />
         </a>
       </div>
     </footer>
